...
    var body: some View {
        VStack(alignment: .center) {
            topView
            centerView
            bottomView
        }
        .alert("Add review",
               isPresented: $showAlert,
               actions: {
            TextField("Enter your review", text: $reviewTextField)
                .background(.red)
            Button(action: {
                let userId = UserDefault.shared.userData?.id ?? 0
...
            }
            .padding()

            if !presenter.addReview.isEmpty {
                Text("\(presenter.addReview)")
                    .animation(.easeIn(duration: 3))
                    .accessibilityIdentifier("Remove good")
            }
        }
    }

    var bottomView: some View {
        List(presenter.listReview) { review in
...
